Added new pages and links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <a href="pages/menu.html">Menu</a>
+    <a href="#emailAnchor">Go to email!</a>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/FwlabJoSdCs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg" alt="An image of pizza on a table">
     <img width="560" src="images/pizza.jpg" alt="Another picture of pizza">
+    <br>
+    <br>
+    <br>
+    <a target="_blank" href="https://www.yelp.ca/biz/posto-pizzeria-and-bar-calgary">Find us on Yelp!</a>
+    <a id="emailAnchor" href="mailto:info@okotokspizza.ca">Get in touch!</a>
+    <a href="tel:4035555555">(403)-555-5555</a>
 </body>
 </html>
