Added SEO tags to site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okotoks Pizza</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Home of the best pizza in Okotoks! Great deals, great pizza!">
+    <meta name="author" content="Doug Pizza">
+    <meta name="keywords" content="best pizza okotoks, cheap, family, italian">
+
+    <meta property="og:title" content="Okotoks Pizza">
+    <meta property="og:description" content="Home of the best pizza in Okotoks! Great deals, great pizza!">
+    <meta property="og:image" content="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg">
+    <meta property="og:url" content="https://okotokspizza.ml">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 
 <body>
@@ -15,14 +24,17 @@
     </div>
     <div>
         <section>
+            <h1>Watch Us Work</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/FwlabJoSdCs" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </section>
         <section>
+            <h1>About Us</h1>
             <article>
                 <img width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
                     alt="An image of pizza on a table">
+                <h3>Made With Love</h3>
                 <p>There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’
                     flavour, experience and consistency you not only want, but deserve. Our customers keep coming back,
                     again, again, and again.
@@ -35,6 +47,7 @@
             </article>
             <article>
                 <img width="560" src="images/pizza.jpg" alt="Another picture of pizza">
+                <h3>Quality Ingredients</h3>
                 <p>After watching his parents run a very successful pizza business in Calgary, Matt Cleveland learned
                     how to make people happy, one topping at a time. Opening the doors to Okotoks Pizza in 2004, Matt
                     has managed to evolve the fresh, traditional Greek-style pizza his family perfected back in the mid
