--- a/pages/menu.html
+++ b/pages/menu.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <meta name="description" content="Menu for the best pizza in Okotoks!">
+    <meta name="author" content="Doug Pizza">
+    <meta name="keywords" content="pizza menu, hawiann, pepperoni, cheese, itialian, menu">
 </head>
 <body>
     <a href="../index.html">Home</a>
