Added new CSS selectors

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Menu for the best pizza in Okotoks!">
     <meta name="author" content="Doug Pizza">
     <meta name="keywords" content="pizza menu, hawiann, pepperoni, cheese, itialian, menu">
+
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
 </head>
 <body>
     <a href="../index.html">Home</a>
