--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okotoks Pizza</title>
-    <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Home of the best pizza in Okotoks! Great deals, great pizza!">
     <meta name="author" content="Doug Pizza">
     <meta name="keywords" content="best pizza okotoks, cheap, family, italian">
@@ -15,6 +14,8 @@
     <meta property="og:image" content="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg">
     <meta property="og:url" content="https://okotokspizza.ml">
     <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
@@ -34,29 +35,43 @@
             <article>
                 <img width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
                     alt="An image of pizza on a table">
-                <h3>Made With Love</h3>
-                <p>There are no short cuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’
-                    flavour, experience and consistency you not only want, but deserve. Our customers keep coming back,
-                    again, again, and again.
-                    We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When we’re
-                    not
-                    scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re
-                    crafting
-                    perfect pizzas for you and your family to enjoy. From hot Hawaiians and classic Canadians to crispy
-                    wings and decadent fudge brownies, everything at Okotoks Pizza is baked with love.</p>
+                <div>
+                    <h3>Made With Love</h3>
+                    <p>There are no short cuts when it comes to our passion. We pull out all the stops,
+                        giving you the
+                        ‘wow’
+                        flavour, experience and consistency you not only want, but deserve. Our customers keep coming
+                        back,
+                        again, again, and again.
+                        We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When
+                        we’re
+                        not
+                        scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re
+                        crafting
+                        perfect pizzas for you and your family to enjoy. From hot Hawaiians and classic Canadians to
+                        crispy
+                        wings and decadent fudge brownies, everything at Okotoks Pizza is baked with love.</p>
+                </div>
             </article>
             <article>
                 <img width="560" src="images/pizza.jpg" alt="Another picture of pizza">
-                <h3>Quality Ingredients</h3>
-                <p>After watching his parents run a very successful pizza business in Calgary, Matt Cleveland learned
-                    how to make people happy, one topping at a time. Opening the doors to Okotoks Pizza in 2004, Matt
-                    has managed to evolve the fresh, traditional Greek-style pizza his family perfected back in the mid
-                    80s to a more modern and convenient comfort food for today’s family on the go.
+                <div>
+                    <h3>Quality Ingredients</h3>
+                    <p>After watching his parents run a very successful pizza business in Calgary, Matt
+                        Cleveland
+                        learned
+                        how to make people happy, one topping at a time. Opening the doors to Okotoks Pizza in 2004,
+                        Matt
+                        has managed to evolve the fresh, traditional Greek-style pizza his family perfected back in the
+                        mid
+                        80s to a more modern and convenient comfort food for today’s family on the go.
 
-                    Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
-                    made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from
-                    Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about eating
-                    it. And you feel even better knowing we're always ready to make you more.</p>
+                        Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
+                        made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from
+                        Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about
+                        eating
+                        it. And you feel even better knowing we're always ready to make you more.</p>
+                </div>
             </article>
         </section>
     </div>
