--- a/index.html
+++ b/index.html
@@ -18,67 +18,66 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
-<body>
-    <div>
-        <a href="pages/menu.html">Menu</a>
-        <a href="#emailAnchor">Go to email!</a>
+<body id="grid-container">
+
+    <div id="header">
+        <div></div>
+        <div></div>
+        <div><a href="tel:4035555555">(403)-555-5555</a></div>
+        <div><a href="pages/menu.html">Menu</a></div>
+        <div><a href="#emailAnchor">Go to email!</a></div>
     </div>
-    <div>
-        <section>
-            <h1>Watch Us Work</h1>
+
+    <div id="content">
+        <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/FwlabJoSdCs" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </section>
-        <section>
-            <h1>About Us</h1>
-            <article>
-                <img width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
-                    alt="An image of pizza on a table">
-                <div>
-                    <h3>Made With Love</h3>
-                    <p>There are no short cuts when it comes to our passion. We pull out all the stops,
-                        giving you the
-                        ‘wow’
-                        flavour, experience and consistency you not only want, but deserve. Our customers keep coming
-                        back,
-                        again, again, and again.
-                        We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When
-                        we’re
-                        not
-                        scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re
-                        crafting
-                        perfect pizzas for you and your family to enjoy. From hot Hawaiians and classic Canadians to
-                        crispy
-                        wings and decadent fudge brownies, everything at Okotoks Pizza is baked with love.</p>
-                </div>
-            </article>
-            <article>
-                <img width="560" src="images/pizza.jpg" alt="Another picture of pizza">
-                <div>
-                    <h3>Quality Ingredients</h3>
-                    <p>After watching his parents run a very successful pizza business in Calgary, Matt
-                        Cleveland
-                        learned
-                        how to make people happy, one topping at a time. Opening the doors to Okotoks Pizza in 2004,
-                        Matt
-                        has managed to evolve the fresh, traditional Greek-style pizza his family perfected back in the
-                        mid
-                        80s to a more modern and convenient comfort food for today’s family on the go.
+        </div>
+        <div>
+            <h1>Watch Us Work</h1>
+            <p>There are no short cuts when it comes to our passion. We pull out all the stops,
+                giving you the
+                ‘wow’
+                flavour, experience and consistency you not only want, but deserve. Our customers keep coming
+                back,
+                again, again, and again.
+                We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When
+                we’re
+                not
+                scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re
+                crafting
+                perfect pizzas for you and your family to enjoy. From hot Hawaiians and classic Canadians to
+                crispy
+                wings and decadent fudge brownies, everything at Okotoks Pizza is baked with love.</p>
+        </div>
+        <div>
+            <h3>Quality Ingredients</h3>
+            <p>After watching his parents run a very successful pizza business in Calgary, Matt
+                Cleveland
+                learned
+                how to make people happy, one topping at a time. Opening the doors to Okotoks Pizza in 2004,
+                Matt
+                has managed to evolve the fresh, traditional Greek-style pizza his family perfected back in the
+                mid
+                80s to a more modern and convenient comfort food for today’s family on the go.
 
-                        Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
-                        made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from
-                        Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about
-                        eating
-                        it. And you feel even better knowing we're always ready to make you more.</p>
-                </div>
-            </article>
-        </section>
+                Okotoks Pizzas are made with only the freshest ingredients like mozzarella, roma tomatoes,
+                made-from-scratch sauce and even features premium toppings like Sorriso Pepperoni, salami from
+                Valbella meats and a healthy Flax crust. You feel good about ordering it. You feel good about
+                eating
+                it. And you feel even better knowing we're always ready to make you more.</p>
+        </div>
+        <div>
+            <img width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
+                    alt="An image of pizza on a table">
+        </div>
     </div>
-    <div>
-        <a target="_blank" href="https://www.yelp.ca/biz/posto-pizzeria-and-bar-calgary">Find us on Yelp!</a>
-        <a id="emailAnchor" href="mailto:info@okotokspizza.ca">Get in touch!</a>
-        <a href="tel:4035555555">(403)-555-5555</a>
+
+    <div id="footer">
+        <div><a target="_blank" href="https://www.yelp.ca/biz/posto-pizzeria-and-bar-calgary">Find us on Yelp!</a></div>
+        <div><a id="emailAnchor" href="mailto:info@okotokspizza.ca">Get in touch!</a></div>
+        <div><a href="tel:4035555555">(403)-555-5555</a></div>
     </div>
 </body>
 
