--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 allowfullscreen></iframe>
         </div>
         <div>
-            <h1>Watch Us Work</h1>
+            <h1 id="watch-header">Watch Us Work</h1>
             <p>There are no short cuts when it comes to our passion. We pull out all the stops,
                 giving you the
                 ‘wow’
@@ -69,7 +69,7 @@
                 it. And you feel even better knowing we're always ready to make you more.</p>
         </div>
         <div>
-            <img width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
+            <img id="pizza-image" width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
                     alt="An image of pizza on a table">
         </div>
     </div>
