Added media queries

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="content">
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FwlabJoSdCs" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/FwlabJoSdCs" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -69,7 +69,7 @@
                 it. And you feel even better knowing we're always ready to make you more.</p>
         </div>
         <div>
-            <img id="pizza-image" width="560" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
+            <img id="pizza-image" src="https://storage.needpix.com/rsynced_images/pizza-4319999_1280.jpg"
                     alt="An image of pizza on a table">
         </div>
     </div>
